# localsets

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test_data_loading.py
.github/workflows/: auto-publish.yml  data-update.yml  force-refresh.yml  monitor-external-repo.yml  publish.yml
examples/: basic_usage.py  example.py  smogon_integration.py  stats_example.py
localsets/: __init__.py  core.py
localsets/metadata/: gen1randombattle_metadata.json  gen2randombattle_metadata.json  gen3randombattle_metadata.json  gen4randombattle_metadata.json  gen5randombattle_metadata.json  gen6randombattle_metadata.json  gen7randombattle_metadata.json  gen8randombattle_metadata.json  gen8randomdoublesbattle_metadata.json  gen9babyrandombattle_metadata.json  gen9randombattle_metadata.json  gen9randomdoublesbattle_metadata.json
localsets/randbattle_data/: gen1randombattle.json  gen2randombattle.json  gen3randombattle.json  gen4randombattle.json  gen5randombattle.json  gen6randombattle.json  gen7randombattle.json  gen8bdsprandombattle.json  gen8randombattle.json  gen8randomdoublesbattle.json  gen9babyrandombattle.json  gen9randombattle.json  gen9randomdoublesbattle.json
localsets/smogon/: sets.py
pokemon_randbats/: __init__.py  cli.py  core.py  formats.py  updater.py
pokemon_randbats/data/: __init__.py
pokemon_randbats/metadata/: __init__.py  gen6randombattle_metadata.json
scripts/: update_all_data.py
tests/: __init__.py  test_core.py
